[tool.poetry]
name = "bioinfoagent"
version = "0.1.0"
description = ""
authors = ["lewislovelock <lewisjianjian@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.22.4"
setuptools = "^69.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
